add sd2.1 version and change the dataloader

--- a/test.ipynb
+++ b/test.ipynb
@@ -177,6 +177,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from diffusers import UNet2DConditionModel\n",
+    "from idavatar.unet import UNetModel\n",
+    "\n",
+    "sd21_path = sd_21 = \"D:/apps/tools/programming/.cache/huggingface/hub/models--stabilityai--stable-diffusion-2-1/snapshots/5cae40e6a2745ae2b01ad92ae5043f95f23644d6\"\n",
+    "\n",
+    "unet = UNet2DConditionModel.from_pretrained(sd21_path, subfolder='unet')\n",
+    "\n",
+    "my_unet = UNetModel()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
